--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-scikit_learn==1.3.0
-scikit_learn==1.4.1.post1
-spacy==3.7.4
+spacy==3.4.0
+https://github.com/explosion/spacy-models/releases/download/de_core_news_md-3.4.0/de_core_news_md-3.4.0.tar.gz
+https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.4.0/de_core_news_lg-3.4.0.tar.gz
+https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.4.0/de_dep_news_trf-3.4.0.tar.gz
+streamlit==1.23.1
